--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -39,13 +39,13 @@ selected_bottom_panel_item=0
 
 screen=0
 mode="maximized"
-position=Vector2i(0, 29)
+position=Vector2i(0, 34)
 size=Vector2i(1024, 981)
 
 [ScriptEditor]
 
-open_scripts=["res://fenetre.gd", "res://fenetredroite.gd", "res://fenetregauche.gd", "res://old_heater.gd"]
-selected_script="res://fenetregauche.gd"
+open_scripts=["res://fenetre.gd", "res://fenetregauche.gd", "res://fenetredroite.gd", "res://old_heater.gd"]
+selected_script="res://fenetredroite.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
@@ -53,7 +53,7 @@ zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(378, 145, 1164, 695)
+floating_window_rect=Rect2i(1167, 438, 1164, 695)
 floating_window_screen=0
 
 [ShaderEditor]
